language and image

--- a/README
+++ b/README
@@ -10,3 +10,7 @@ Fully customization in ACP
 Works on viewforum.php and index.php
 Works in all styles
 No JS
+
+example :
+![Topics](topic_messages.png)
+![Stats](stats.png)
