--- a/README
+++ b/README
@@ -12,5 +12,5 @@ Works in all styles
 No JS
 
 example :
-![Topics](topic_messages.png)
-![Stats](stats.png)
+![Topics](https://raw.githubusercontent.com/svennd/simplecount/master/topic_messages.png)
+![Stats](https://raw.githubusercontent.com/svennd/simplecount/master/stats.png)
