--- a/README
+++ b/README
@@ -12,5 +12,5 @@ Works in all styles
 No JS
 
 Examples :
-[[https://raw.githubusercontent.com/svennd/simplecount/master/topic_messages.png|alt=topic_messages]]
-[[https://raw.githubusercontent.com/svennd/simplecount/master/stats.png|alt=stats]]
+![topic_messages](https://raw.githubusercontent.com/svennd/simplecount/master/topic_messages.png)
+![stats](https://raw.githubusercontent.com/svennd/simplecount/master/stats.png)
