--- a/README
+++ b/README
@@ -12,5 +12,5 @@ Works in all styles
 No JS
 
 Examples :
-![topic_messages](https://raw.githubusercontent.com/svennd/simplecount/master/topic_messages.png)
+![topic_messages](https://github.com/svennd/simplecount/raw/master/stats.png)
 ![stats](https://raw.githubusercontent.com/svennd/simplecount/master/stats.png)
